--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<body>
-<h1>hahahahahah</h1>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+		<!-- Latest compiled JavaScript -->
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		
+		<!-- Mobile First Scale -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		
+	</head>
+	
+	
+	<body>
+		
+	</body>
+</html>
