--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="scripts/bootstrap.min.css">
 
 		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="scripts/jquery.min.js"></script>
 
 		<!-- Latest compiled JavaScript -->
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="scripts/bootstrap.min.js"></script>
 		
 		<!-- Mobile First Scale -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +18,12 @@
 	
 	
 	<body>
-		
+		<div class="container text-center">
+
+				<button type="button" class="btn btn-primary btn-lg col-md-4"><h1>Start</h1></button>
+				<button type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
+				<button type="button" class="btn btn-success btn-lg col-md-4"><h1>Ende</h1></button>
+			
+		</div>
 	</body>
 </html>
