--- a/index.html
+++ b/index.html
@@ -14,16 +14,48 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		
-	</head>
-	
-	
+	</head>	
 	<body>
-		<div class="container text-center">
+	
+		<!-- Modal -->
+		<div id="myModal" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
 
-				<button type="button" class="btn btn-primary btn-lg col-md-4"><h1>Start</h1></button>
-				<button type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
+			<!-- Modal content-->
+			<div class="modal-content">
+			  <div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Modal Header</h4>
+			  </div>
+			  <div class="modal-body">
+				<p>Some text in the modal.</p>
+			  </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			  </div>
+			</div>
+
+		  </div>
+		</div>
+	
+		<div class="container text-center">
+			<div class="embed-responsive embed-responsive-16by9">
+				<img src="img/ReconTime.png" class="embed-responsive-item" alt="Recon Time">
+			</div>
+		</div>
+		
+		<div class="container text-center">
+			<form role="form">
+				<div class="form-group">
+					<input class="form-control" id="email">
+				</div>
+			</form>
+		</div>
+	
+		<div class="container text-center">
+				<button type="button" class="btn btn-primary btn-lg col-md-4" data-toggle="modal" data-target="#myModal"><h1>Start</h1></button>
+				<button style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
 				<button type="button" class="btn btn-success btn-lg col-md-4"><h1>Ende</h1></button>
-			
 		</div>
 	</body>
 </html>
