--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	
 		<div class="container text-center">
 				<button type="button" class="btn btn-primary btn-lg col-md-4" data-toggle="modal" data-target="#myModal"><h1>Start</h1></button>
-				<button style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
+				<button id="timestamp" style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
 				<button type="button" class="btn btn-success btn-lg col-md-4"><h1>Ende</h1></button>
 		</div>
 	</body>
