--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<!-- Mobile First Scale -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
+		<!--Timestampscript-->
+		<script type="text/javascript" language="JavaScript" src="scripts/timestamp.js"></script>
 		
 	</head>	
 	<body>
@@ -54,7 +56,7 @@
 	
 		<div class="container text-center">
 				<button type="button" class="btn btn-primary btn-lg col-md-4" data-toggle="modal" data-target="#myModal"><h1>Start</h1></button>
-				<button id="timestamp" style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><h1>12.00</h1></button>
+				<button id="timestamp" style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><div id="time"> </div> </button>
 				<button type="button" class="btn btn-success btn-lg col-md-4"><h1>Ende</h1></button>
 		</div>
 	</body>
