--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</style>
 		
 		<!--Timestampscript-->
-		<script type="text/javascript" language="JavaScript" src="scripts/timestamp.js"></script>
+		<script type="text/javascript" language="JavaScript" src="scripts/timeKeeper.js"></script>
 		
 	</head>	
 	<body>
@@ -85,7 +85,7 @@
 				<!-- Time Stamp -->
 				<button id="timestamp" style="color: inherit;" type="button" class="btn btn-default btn-lg col-md-4"><div id="time"> </div> </button>
 				
-				<!-- End -->
+				<!-- End Button -->
 				<button type="button" class="btn btn-success btn-lg col-md-4"><h1>Ende</h1></button>
 				
 		</div>
