--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<h4 class="modal-title">Start Time</h4>
 			  </div>
 			  <div class="modal-body">
-				<p><div id="modalStartBody" >Some text in the modal.</div></p>
+				<p><div id="modalStartBody" ></div></p>
 			  </div>
 			  <div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -69,7 +69,7 @@
 				<h4 class="modal-title">End Time</h4>
 			  </div>
 			  <div class="modal-body">
-				<p><div id="modalEndBody" >Some text in the modal.</div></p>
+				<p><div id="modalEndBody" ></div></p>
 			  </div>
 			  <div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
