--- a/adminpanel.html
+++ b/adminpanel.html
@@ -21,10 +21,52 @@
 		
 		<!--Timestampscript-->
 		<script type="text/javascript" language="JavaScript" src="scripts/timeKeeper.js"></script>
-		
-	</head>																													
-	<body>																													
-																																			
-		
+	</head>		
+	<body>	
+		<button type="button" class="btn btn-default" style="margin-top: 10px; margin-left: 10px">Exit</button></div>
+		<!--Buttongroup-->
+		<div class="container">
+			<div class="btn-group btn-group-justified" style="margin-top: 20px">
+				<a href="#" class="btn btn-primary">Home</a>
+				<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#userModal">Benutzerverwaltung</a>
+				<a href="#" class="btn btn-primary">Text</a>
+			
+			<!-- Modal -->
+			<div id="userModal" class="modal fade" role="dialog">
+			<div class="modal-dialog">
+
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Benutzerverwaltung</h4>
+				</div>
+				<div class="modal-body">
+					<form role="form">
+						<div class="form-group">
+							<label for="text">Benutzername:</label>
+							<input type="text" class="form-control" id="text">
+						</div>
+						<div class="form-group">
+							<label for="pwd">Passwort:</label>
+							<input type="password" class="form-control" id="pwd">
+						</div>
+						<div class="checkbox">
+							<label><input type="checkbox"> Standardbenutzer</label>
+						</div>
+						<div class="checkbox">
+							<label><input type="checkbox"> Administrator</label>
+						</div>
+						<button type="submit" class="btn btn-default">Erstellen</button>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Schliessen</button>
+				</div>
+			</div>
+			</div>
+			</div>
+		  </div>
+	</div>
 	</body>																													
 </html>
